--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "name": "gatsby",
   "version": "1.0.0",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@rehooks/local-storage": "^2.4.0",
+    "apollo-boost": "^0.4.7",
     "gatsby": "^2.18.14",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "graphql": "^15.0.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
-    "@now/node": "^1.3.0"
+    "@now/node": "^1.3.0",
+    "@types/node-fetch": "^2.5.7"
   },
   "scripts": {
     "dev": "gatsby develop",
