--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "graphql": "^15.0.0",
+    "lottie-web": "^5.6.8",
     "node-fetch": "^2.6.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
