--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "graphql": "^15.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lottie-web": "^5.6.8",
     "node-fetch": "^2.6.0",
     "react": "^16.5.1",
