--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.4.7",
     "gatsby": "^2.18.14",
     "gatsby-image": "^2.0.15",
+    "gatsby-plugin-env-variables": "^1.0.2",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "graphql": "^15.0.0",
